update practice (ptg)