@@ -3,12 +3,18 @@ package sample.cafekiosk.spring.domain.order;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import jakarta.persistence.*;
-
+import jakarta.persistence.CascadeType;
 import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.OneToMany;
+import jakarta.persistence.Table;
 import lombok.AccessLevel;
+import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import sample.cafekiosk.spring.domain.BaseEntity;
@@ -35,17 +41,22 @@ public class Order extends BaseEntity {
 	@OneToMany(mappedBy = "order", cascade = CascadeType.ALL)
 	private List<OrderProduct> orderProducts = new ArrayList<>();
 
-	public Order(List<Product> products, LocalDateTime registeredDateTime) {
-		this.orderStatus = OrderStatus.INIT;
+	@Builder
+	private Order(List<Product> products, OrderStatus orderStatus, LocalDateTime registeredDateTime) {
+		this.orderStatus = orderStatus;
 		this.totalPrice = calculateTotalPrice(products);
 		this.registeredDateTime = registeredDateTime;
 		this.orderProducts = products.stream()
 			.map(product -> new OrderProduct(this, product))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	public static Order create(List<Product> products, LocalDateTime registeredDateTime) {
-		return new Order(products, registeredDateTime);
+		return Order.builder()
+			.orderStatus(OrderStatus.INIT)
+			.products(products)
+			.registeredDateTime(registeredDateTime)
+			.build();
 	}
 
 	private int calculateTotalPrice(List<Product> products) {
